# lavoisier

./: .containerignore  .gitignore  ARCHITECTURE.md  ATO.md  CLAUDE.md  CUSTOM_TOOL_INSTRUCTIONS.md  Cargo.toml  Containerfile  LICENSE  PUBLISHING.md  README.md  RECIPE.md  TODO.md  lavoisier.example.toml
.github/workflows/: ci.yml  release.yml
bench/: .gitignore  PINS.txt  README.md  acceptance.zsh  dirac.zsh  realtest.zsh  run.zsh  verify.zsh
bench/tasks/: 01_extensionswb_service.task  02_sendRequest.task  03_IOverlayWidget.task  04_addLogging.task  05_DynamicCache.task  06_stoppingcriteria.task  07_latency.task  08_datadict.task
crates/lvz-agent/: Cargo.toml
crates/lvz-agent/src/: lib.rs
crates/lvz-anthropic/: Cargo.toml
crates/lvz-anthropic/examples/: anthropic_verify.rs  live_verify.rs
crates/lvz-anthropic/src/: batch.rs  lib.rs  sse.rs
crates/lvz-claude-cli/: Cargo.toml
crates/lvz-claude-cli/src/: lib.rs
crates/lvz-cli/: Cargo.toml  README.md
crates/lvz-cli/examples/: batch_edit_verify.rs
crates/lvz-cli/src/: config.rs  lib.rs  main.rs
crates/lvz-context/: Cargo.toml
crates/lvz-context/src/: anchor.rs  budget.rs  diff.rs  lang.rs  lib.rs  skeleton.rs  symbols.rs  tokens.rs
crates/lvz-context/tests/: budget.rs
crates/lvz-google/: Cargo.toml
crates/lvz-google/examples/: google_verify.rs  live_verify.rs
crates/lvz-google/src/: batch.rs  lib.rs  sse.rs
crates/lvz-gw-cron/: Cargo.toml
crates/lvz-gw-cron/src/: cron.rs  lib.rs
crates/lvz-gw-http/: Cargo.toml
crates/lvz-gw-http/src/: lib.rs
crates/lvz-gw-http/tests/: http.rs
crates/lvz-gw-matrix/: Cargo.toml
crates/lvz-gw-matrix/src/: e2ee.rs  lib.rs
crates/lvz-gw-slack/: Cargo.toml
crates/lvz-gw-slack/src/: lib.rs
crates/lvz-memory/: Cargo.toml
crates/lvz-memory/src/: lib.rs
crates/lvz-protocol/: Cargo.toml
crates/lvz-protocol/src/: agent.rs  batch.rs  event.rs  gateway.rs  lib.rs  message.rs  provider.rs  retry.rs  telemetry.rs  tool.rs  tune.rs
crates/lvz-tools/: Cargo.toml
crates/lvz-tools/src/: batch.rs  builtins.rs  context.rs  lib.rs  search.rs
crates/lvz-tune/: Cargo.toml
crates/lvz-tune/src/: bayes.rs  lib.rs
crates/lvz-xai/: Cargo.toml  build.rs
crates/lvz-xai/examples/: live_verify.rs  xai_verify.rs
crates/lvz-xai/src/: grpc.rs  http.rs  lib.rs
docs/: ATO.md  BENCHMARKS.md
examples/private-tools/: Cargo.toml
examples/private-tools/src/: main.rs  tools.rs
infra/: README.md
infra/scripts/: build-and-push.zsh  deploy.zsh
infra/terraform/: .gitignore  alb.tf  ecr.tf  ecs.tf  iam.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf
proto/: VENDOR.md
proto/xai/api/v1/: chat.proto  usage.proto
