[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.88" # floor set by the tonic 0.14 gRPC stack (M7)
license = "MIT"
repository = "https://github.com/DavidLee18/lavoisier"
authors = ["Jaehyun Lee"]

# Shared dependency versions. Crates opt in via `dep.workspace = true`.
[workspace.dependencies]
# Core contract deps (lvz-protocol)
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

# Runtime / transport deps (adapters, agent, cli)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs", "process", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }

# HTTP/WebSocket gateway (lvz-gw-http). axum brings its own hyper 1 server + WS support.
axum = { version = "0.8", features = ["ws"] }

# gRPC stack (lvz-xai primary transport; codegen from vendored proto/). Client-only:
# default tonic features pull in the server/router (axum, h2) which we don't need.
tonic = { version = "0.14", default-features = false, features = ["codegen", "channel", "tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"

# Internal crates
lvz-protocol = { path = "crates/lvz-protocol", version = "0.1.0" }
lvz-anthropic = { path = "crates/lvz-anthropic", version = "0.1.0" }
lvz-google = { path = "crates/lvz-google", version = "0.1.0" }
lvz-claude-cli = { path = "crates/lvz-claude-cli", version = "0.1.0" }
lvz-xai = { path = "crates/lvz-xai", version = "0.1.0" }
lvz-tools = { path = "crates/lvz-tools", version = "0.1.0" }
lvz-agent = { path = "crates/lvz-agent", version = "0.1.0" }
lvz-context = { path = "crates/lvz-context", version = "0.1.0" }
lvz-memory = { path = "crates/lvz-memory", version = "0.2.0" }
lvz-tune = { path = "crates/lvz-tune", version = "0.1.0" }
lvz-gw-http = { path = "crates/lvz-gw-http", version = "0.1.0" }
lvz-gw-matrix = { path = "crates/lvz-gw-matrix", version = "0.2.2" }
lvz-gw-cron = { path = "crates/lvz-gw-cron", version = "0.2.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
