[package]
name = "lvz-agent"
version = "0.2.0"
description = "The Lavoisier reasoning loop: plan→act→observe, provider- and gateway-agnostic."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
lvz-tools.workspace = true
lvz-context.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
