[package]
name = "lvz-anthropic"
version = "0.0.0"
description = "Anthropic provider for Lavoisier: native Messages API over SSE with prompt caching and extended thinking."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
