[package]
name = "lavoisier"
version = "0.1.0"
description = "Lavoisier — a token-efficient CLI coding agent (Anthropic + xAI + Google Gemini), with prompt caching, a tree-sitter context engine, and an adaptive-token-optimisation tuner."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
homepage = "https://github.com/DavidLee18/lavoisier"
keywords = ["llm", "agent", "coding-agent", "cli", "anthropic"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lavoisier"
path = "src/main.rs"

# cargo-binstall: fetch a prebuilt binary from the GitHub release instead of compiling (so end
# users need no Rust toolchain or `protoc`). The release.yml workflow uploads matching tarballs.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/lavoisier-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
lvz-protocol.workspace = true
lvz-anthropic.workspace = true
lvz-google.workspace = true
lvz-claude-cli.workspace = true
lvz-xai.workspace = true
lvz-agent.workspace = true
lvz-tools.workspace = true
lvz-memory.workspace = true
lvz-tune.workspace = true
lvz-gw-http.workspace = true
lvz-gw-matrix.workspace = true
tokio.workspace = true
clap.workspace = true
futures.workspace = true

[dev-dependencies]
serde_json.workspace = true
