[package]
name = "lvz-google"
version = "0.2.0"
description = "Google Gemini provider for Lavoisier: native Generative Language API over SSE with configurable thinking effort."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
