[package]
name = "lvz-gw-cron"
version = "0.3.0"
description = "Cron-scheduled gateway for the Lavoisier agent — fires agent turns on a UTC cron schedule."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
