[package]
name = "lvz-gw-http"
version = "0.0.0"
description = "HTTP/REST + WebSocket gateway for Lavoisier: drives the shared agent (AgentHandle) and streams the normalised Event stream over SSE/WebSocket."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
