[package]
name = "lvz-tools"
version = "0.2.0"
description = "Tool registry and built-in tools (filesystem, shell) for the Lavoisier agent."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
lvz-context.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
