[package]
name = "lvz-tune"
version = "0.2.0"
description = "Adaptive token optimisation (ATO, RECIPE.md §6.6) for Lavoisier: an online, quality-gated Tuner — an epsilon-greedy hill-climb over Knobs keyed by archetype x caching x model tier, bounded by the §6.5 baseline floor. Pure bookkeeping; no extra deps."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
