[package]
name = "lvz-xai"
version = "0.0.0"
description = "xAI provider for Lavoisier. M1: in-crate OpenAI-compat transport against api.x.ai/v1. gRPC primary path lands at M7."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
