[package]
name = "lvz-xai"
version = "0.0.0"
description = "xAI provider for Lavoisier: gRPC primary transport (tonic, codegen from vendored proto/) + in-crate OpenAI-compat fallback against api.x.ai/v1."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lvz-protocol.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
tokio.workspace = true
